6438 Use StateStoreProvider method in MultiThreadedStateStoreCommitter